	*						 *
	*	       1.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.9.0


USER-VISIBLE CHANGES

    o	Underscore '_' is now allowed in syntactically valid names, and
	make.names() no longer changes underscores.  Very old code
	that makes use of underscore for assignment may now give
	confusing error messages.


NEW FEATURES

    o	The perl=TRUE argument to grep/regexpr/(g)sub() now uses
	character tables prepared for the locale currently in use each
	time it is used, rather than those of the C locale.

    o	The `package' argument to data() is no longer allowed to be a
	(unquoted) name and so can be a variable name or a quoted
	character string.

    o	Deparsing (including using dump() and dput()) an integer
	vector now wraps it in as.integer() so it will be source()d
	correctly.  (Related to PR#4361.)

    o	Model fits now add a "dataClasses" attribute to the terms, which
	can be used to check that the variables supplied for
	prediction are of the same type as those used for fitting.
	(It is currently used by predict() methods for classes "lm",
	"mlm", "glm", "lqs" and "ppr".)

    o	read.table() now allows embedded newlines in quoted fields. (PR#4555)

    o	New command-line argument --max-ppsize allows the size of the
	pointer protection stack to be set higher than the previous
	limit of 10000.

    o	The fonts on an X11() device (also jpeg() and png() on Unix)
	can be specified by a new argument `fonts' defaulting to the
	value of a new option "X11fonts".

    o	strsplit() now has a `fixed' argument and split="" is optimized.

    o	findInterval(x, v) now allows +/-Inf values, and NAs in x.

    o   subset() now allows a `drop' argument to remove unused factor
        levels.  The default is still to keep them. 

    o	model.frame() methods, for example those for "lm" and "glm", pass
	relevant parts of ... onto the default method.  (This has